# SkyRL

./: .gitmodules  .pre-commit-config.yaml  README.md
skyagent/: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  skyrl-train  somelogging.txt  vis_trace.py
skyagent/examples/run_openai/: README.md  openai_react.yaml  run_openai_react.py
skyagent/examples/run_skyrl/: README.md  run_skyrl_oh.py  skyrl_oh.sh  skyrl_oh.yaml  skyrl_train_main.py  trainer.py
skyagent/examples/run_verl/: README.md  verl_main_ppo.py  verl_oh.sh  verl_oh.yaml  verl_trainer.py
skyagent/examples/skyrl_v0/: README.md
skyagent/skyagent/: __init__.py  auto.py
skyagent/skyagent/agents/: __init__.py  base.py  mapping.py
skyagent/skyagent/config/: configuration_utils.py
skyagent/skyagent/dispatcher/: dispatchers.py
skyagent/skyagent/functional/: chat_template.py  function_calling.py  functions.py
skyagent/skyagent/integrations/: __init__.py  base.py  openai.py
skyagent/skyagent/tasks/: base.py
skyagent/skyagent/tools/: __init__.py  base.py  finish.py  prompt.py  sandbox_fusion.py  search_engine.py  web_browser.py
skyagent/tests/: test_openai_backend.py  test_openai_oh.py  test_openai_oh.yaml
skyagent/tests/react_task_tests/: no_tool.yaml  react_finish_only.yaml  react_interpreter.yaml  test.py  test_sandbox_endpoint.py  test_stem.py
skyrl-train/: .env.llm_judge  .gitignore  README.md  pyproject.toml  skyrl-gym
skyrl-train/ci/: anyscale_gpu_ci.yaml  anyscale_gpu_e2e_test.yaml  gpu_ci_run.sh  gpu_e2e_test_run.sh
skyrl-train/docs/: build.sh  index.rst
skyrl-train/docs/algorithms/: custom_algorithms.rst  dapo.rst
skyrl-train/docs/api/: constants.rst  entrypoint.rst  registry.rst
skyrl-train/docs/checkpointing-logging/: checkpointing.rst
skyrl-train/docs/configuration/: config.rst  placement.rst
skyrl-train/docs/datasets/: dataset-preparation.rst
skyrl-train/docs/examples/: flash_rl.rst  llm_as_a_judge.rst  mini_swe_agent.rst  multi_turn_text2sql.rst  search.rst  training_backends.rst
skyrl-train/docs/getting-started/: development.rst  installation.rst
skyrl-train/docs/recipes/: searchr1.rst  skyrl-sql.rst
skyrl-train/docs/skyagent/: agent-overview.rst
skyrl-train/docs/troubleshooting/: troubleshooting.rst
skyrl-train/docs/tutorials/: new_env.rst  skyrl_gym_generator.rst  tools_guide.rst
skyrl-train/examples/async/: async_trainer.py  main_async.py
skyrl-train/examples/flash_rl/: .env.0.5b_int8  .env.flashrl  .env.fp8  .env.int8  flash_rl_engine.py  main_dapo_flashrl.py  run_dapo_flashrl.sh  run_dapo_flashrl_32b.sh  run_dapo_gsm8k_flashrl_0.5b_fp8.sh  run_dapo_gsm8k_flashrl_0.5b_int8.sh  run_dapo_gsm8k_flashrl_32b_int8.sh  run_dapo_repro_flashrl_0.5b_int8.sh  run_dapo_repro_flashrl_32b_int8.sh
skyrl-train/examples/gsm8k/: run_generation_gsm8k.sh  run_gsm8k.sh
skyrl-train/examples/inference_http_endpoint/: main.py  run_gsm8k_with_inference_http_endpoint.sh  skyrl_gym_http_generator.py
skyrl-train/examples/llm_as_a_judge/: gsm8k_dataset_judge.py  llm_judge_env.py  main_llm_judge.py  run_llm_judge.sh
skyrl-train/examples/megatron/: run_fsdp_baseline.sh  run_megatron.sh  run_megatron_moonlight.sh  run_megatron_qwen3-235b-a22b.sh  run_megatron_qwen3-30b-a3b.sh  run_search_megatron.sh
skyrl-train/examples/mini_swe_agent/: .env.miniswe  README.md  litellm.json  main_mini_swe.py  mini_swe_generator.py  mini_swe_utils.py  preprocess_swegym.py  run_mini_swe_30B.sh  run_mini_swe_8B.sh  swebench.yaml
skyrl-train/examples/moe/: README.md  run_qwen1_5_MoE_A2_7B.sh
skyrl-train/examples/multiply/: run_multiply.sh
skyrl-train/examples/remote_inference_engine/: run_remote.sh  run_sglang_server.sh  run_vllm_server.sh
skyrl-train/examples/search/: README.md  run_search.sh  run_search_conversation_format.sh  searchr1_dataset.py
skyrl-train/examples/simplecoder/: manifest.scm  simplecoder.md  simplecoder.py
skyrl-train/examples/terminal_bench/: README.md  run_tbench.sh  run_tbench_gen.sh
skyrl-train/examples/text_to_sql/: run_skyrl_sql.sh  run_skyrl_sql_conversation_format.sh  run_sql_deepspeed.sh  run_sql_fsdp.sh  run_sql_fsdp_2node.sh  sql.md
skyrl-train/examples/tis_correction/: main_tis_dapo.py  run_dapo_tis.sh
skyrl-train/examples/training_backends/: run_no_seq_pack.sh
skyrl-train/examples/turn_level_rewards/: README.md  gsm8k_multi_turn_dataset.py  run_gsm8k_multi_turn.sh
skyrl-train/integrations/verifiers/: README.md  install_environment.py  prepare_dataset.py  run_verifiers.sh  verifiers_generator.py
skyrl-train/scripts/: launch_multiple_remote_servers.py  multi_node_nccl_test.py
skyrl-train/scripts/full_context/: trainer_full_ctx.py
skyrl-train/skyrl_train/: evaluate.py  models.py  trainer.py  training_batch.py  weights_manager.py
skyrl-train/skyrl_train/config/: ppo_base_config.yaml
skyrl-train/skyrl_train/dataset/: dataset.py  preprocess.py  replay_buffer.py
skyrl-train/skyrl_train/distributed/: deepspeed_strategy.py  dispatch.py  fsdp_strategy.py  fsdp_utils.py  strategy.py
skyrl-train/skyrl_train/entrypoints/: main_base.py  main_generate.py
skyrl-train/skyrl_train/generators/: base.py  skyrl_gym_generator.py  utils.py
skyrl-train/skyrl_train/inference_engines/: base.py  inference_engine_client.py  inference_engine_client_http_endpoint.py  openai_api_protocol.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  utils.py
skyrl-train/skyrl_train/utils/: __init__.py  constants.py  io.py  ppo_utils.py  profiler.py  tracking.py  trainer_utils.py  utils.py
skyrl-train/skyrl_train/workers/: worker.py  worker_utils.py
skyrl-train/tests/cpu/: __init__.py  test_eval.py  test_generator_postprocess.py  test_route_prompts_to_engines.py  test_trainer.py  test_trainer_utils.py  util.py
skyrl-train/tests/gpu/: conftest.py  test_engine_generation.py  test_expert_parallel_inference.py  test_grpo_sp_sanity.py  test_main_generate.py  test_megatron_worker.py  test_multi_node_pg.py  test_policy_local_engines_e2e.py  test_ppo_train.py  test_save_load_ckpt.py  test_save_load_model.py  test_skyrl_gym_generator.py  (+4 more)
(+121 files in other folders)
